# kinetic

./: CMakeLists.txt  boundary.cpp  chart.cpp  chart.h  collisions.cpp  constants.h  main.cpp  meanvelocity.cpp  meanvelocity.h  particle.cpp  particle.h  particles2d.cpp  particles2d.h  plasma.cpp  plasma.h  probeindicator.cpp  probeindicator.h  simbox.cpp  simbox.h  simbox.ui  testclock.cpp  vector3dd.h
include/: boundary.h  collisions.h  engineparameters.h  particles2d.h  plasma.h  reaction.h  simbox.h
src/: engineparameters.cpp  particles2d.cpp  reaction.cpp
